WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229262
Leak of CMSampleBufferRef (up to 2.25 KB each) in com.apple.WebKit.GPU.Development process
https://bugs.webkit.org/show_bug.cgi?id=229262
Summary
Leak of CMSampleBufferRef (up to 2.25 KB each) in com.apple.WebKit.GPU.Develo...
David Kilzer (:ddkilzer)
Reported
2021-08-18 16:58:00 PDT
Leak of CMSampleBufferRef (up to 2.25 KB each) in com.apple.WebKit.GPU.Development process. STACK OF 210 INSTANCES OF 'ROOT LEAK: <CMSampleBuffer>': 32 dyld 0x117d7a4d5 start + 421 31 WebKit 0x113879a30 WebKit::XPCServiceMain(int, char const**) + 137 XPCServiceMain.mm :243 30 libxpc.dylib 0x7ff81a3b9b32 xpc_main + 99 29 libxpc.dylib 0x7ff81a3ba143 _xpc_objc_main + 825 28 com.apple.Foundation 0x7ff81b53f2b3 -[NSRunLoop(NSRunLoop) run] + 76 27 com.apple.Foundation 0x7ff81b4b4c6e -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 216 26 com.apple.CoreFoundation 0x7ff81a72e005 CFRunLoopRunSpecific + 567 25 com.apple.CoreFoundation 0x7ff81a72ea5b __CFRunLoopRun + 897 24 com.apple.CoreFoundation 0x7ff81a730036 __CFRunLoopDoSources0 + 242 23 com.apple.CoreFoundation 0x7ff81a7302bd __CFRunLoopDoSource0 + 180 22 com.apple.CoreFoundation 0x7ff81a730355 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 21 JavaScriptCore 0x119b191c2 WTF::RunLoop::performWork(void*) + 34 RunLoopCF.cpp:47 20 JavaScriptCore 0x119b188ef WTF::RunLoop::performWork() + 431 RunLoop.cpp:134 19 WebKit 0x1136a3b55 IPC::Connection::dispatchOneIncomingMessage() + 169 Connection.cpp:1172 18 WebKit 0x1136a3914 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 238 Connection.cpp:1105 17 WebKit 0x113793e1b WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 455 GPUConnectionToWebProcessMessageReceiver.cpp:0 16 WebKit 0x1137cbbb7 WebKit::GPUConnectionToWebProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) + 303 GPUConnectionToWebProcess.cpp:0 15 WebKit 0x11380e52a WebKit::RemoteMediaRecorderManager::didReceiveRemoteMediaRecorderMessage(IPC::Connection&, IPC::Decoder&) + 56 RemoteMediaRecorderManager.cpp:54 14 WebKit 0x1137b9dec void IPC::handleMessage<Messages::RemoteMediaRecorder::AudioSamplesAvailable, WebKit::RemoteMediaRecorder, void (WebKit::RemoteMediaRecorder::*)(WTF::MediaTime, unsigned long long)>(IPC::Decoder&, WebKit::RemoteMediaRecorder*, void (WebKit::RemoteMediaRecorder::*)(WTF::MediaTime, unsigned long long)) + 72 HandleMessage.h:120 13 WebKit 0x1137bbe37 void IPC::callMemberFunctionImpl<WebKit::RemoteMediaRecorder, void (WebKit::RemoteMediaRecorder::*)(WTF::MediaTime, unsigned long long), std::__1::tuple<WTF::MediaTime, unsigned long long>, 0ul, 1ul>(WebKit::RemoteMediaRecorder*, void (WebKit::RemoteMediaRecorder::*)(WTF::MediaTime, unsigned long long), std::__1::tuple<WTF::MediaTime, unsigned long long>&&, std::__1::integer_sequence<unsigned long, 0ul, 1ul>) + 69 HandleMessage.h:44 12 WebCore 0x11d13744e WebCore::MediaRecorderPrivateWriter::appendAudioSampleBuffer(WebCore::PlatformAudioData const&, WebCore::AudioStreamDescription const&, WTF::MediaTime const&, unsigned long) + 78 MediaRecorderPrivateWriterCocoa.mm:426 11 WebCore 0x11d125960 WebCore::AudioSampleBufferCompressor::addSampleBuffer(opaqueCMSampleBuffer*) + 64 AudioSampleBufferCompressor.mm:518 10 libdispatch.dylib 0x7ff81a4c16b4 _dispatch_lane_barrier_sync_invoke_and_complete + 60 9 libdispatch.dylib 0x7ff81a4b4500 _dispatch_client_callout + 8 8 JavaScriptCore 0x119b6c642 void WTF::dispatchWorkItem<WTF::Function<void ()> >(void*) + 18 WorkQueueCocoa.cpp:49 7 WebCore 0x11d125ef4 WTF::Detail::CallableWrapper<WebCore::AudioSampleBufferCompressor::addSampleBuffer(opaqueCMSampleBuffer*)::$_7, void>::call() + 100 Function.h:53 6 WebCore 0x11d1256a5 WebCore::AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime(CMTime) + 309 AudioSampleBufferCompressor.mm:481 5 WebCore 0x11d124cea WebCore::AudioSampleBufferCompressor::sampleBufferWithNumPackets(unsigned int, AudioBufferList) + 506 AudioSampleBufferCompressor.mm:0 4 com.apple.CoreMedia 0x7ff8234a4bcb CMAudioSampleBufferCreateWithPacketDescriptions + 56 3 com.apple.CoreMedia 0x7ff8234a4d83 figAudioSampleBufferCreateWithPacketDescriptionsCallbackOrHandler + 434 2 com.apple.CoreMedia 0x7ff8234543f4 sBufCreate + 134 1 com.apple.CoreFoundation 0x7ff81a6b308f _CFRuntimeCreateInstance + 580 0 libsystem_malloc.dylib 0x7ff81a4a2ffd _malloc_zone_malloc + 249 ==== 1301 (223K) << TOTAL >> ---- 6 (2.25K) ROOT LEAK: <CMSampleBuffer 0x7fb1d5477e10> [528] 2 (1.64K) <CMBlockBuffer 0x7fb1d5474fe0> [144] 1 (1.50K) 0x7fb1d580ca00 [1536] 3 (96 bytes) <NSMutableDictionary 0x7fb1d542e890> [32] 1 (48 bytes) <NSMutableDictionary (Storage) 0x7fb1d541c400> [48] 1 (16 bytes) cow --> <NSMutableDictionary.cow (struct __cow_state_t) 0x7fb1d75459b0> [16] ---- 6 (2.25K) ROOT LEAK: <CMSampleBuffer 0x7fb1d754f820> [528] 2 (1.64K) <CMBlockBuffer 0x7fb1d7551090> [144] 1 (1.50K) 0x7fb1e08c0e00 [1536] 3 (96 bytes) <NSMutableDictionary 0x7fb1d7546cc0> [32] 1 (48 bytes) <NSMutableDictionary (Storage) 0x7fb1d7550000> [48] 1 (16 bytes) cow --> <NSMutableDictionary.cow (struct __cow_state_t) 0x7fb1d5433d10> [16] ---- […] <
rdar://problem/82076765
>
Attachments
Patch v1
(6.40 KB, patch)
2021-08-18 17:04 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-08-18 17:04:20 PDT
Created
attachment 435818
[details]
Patch v1
EWS
Comment 2
2021-08-18 20:34:26 PDT
Committed
r281220
(
240657@main
): <
https://commits.webkit.org/240657@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435818
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug