Leak of CMSampleBufferRef (up to 2.25 KB each) in com.apple.WebKit.GPU.Development process <https://webkit.org/b/229262> <rdar://problem/82076765>

Reviewed by Darin Adler.

Covered by running layout tests with --leaks plus future patch
to check for leaks in the GPU process.

* platform/mediarecorder/cocoa/AudioSampleBufferCompressor.h:
(WebCore::AudioSampleBufferCompressor::sampleBufferWithNumPackets):
- Update signature to return RetainPtr<CMSampleBufferRef>.

* platform/mediarecorder/cocoa/AudioSampleBufferCompressor.mm:
(WebCore::AudioSampleBufferCompressor::sampleBufferWithNumPackets):
- Update signature to return RetainPtr<CMSampleBufferRef>.
- Rename `sampleBuffer` to `rawSampleBuffer` to match similar
  pattern used in other code, then use `sampleBuffer` to store
  `rawSampleBuffer` wrapped in a RetainPtr<>.
(WebCore::AudioSampleBufferCompressor::processSampleBuffersUntilLowWaterTime):
- Add get() to `buffer` variable since it is now a RetainPtr<>.


Canonical link: https://commits.webkit.org/240657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281220 268f45cc-cd09-0410-ab3c-d52691b4dbfc